    to control how the Install() and InstallAs() Builders install files.
    The default INSTALL function now copies, not links, files.

  - Remove deprecated features:  the "name" argument to Builder objects,
    and the Environment.Update() method.

  - Add an Environment.SourceCode() method to support fetching files
    from source code systems.  Add factory methods that create Builders
    to support BitKeeper, CVS, RCS, SCCS and Subversion.  Add support
    for fetching files from RCS or SCCS transparently (like GNU Make).

  - Make the internal to_String() function more efficient.

  - Make the error message the same as other build errors when there's a
    problem unlinking a target file in preparation for it being built.

  - Make TARGET, TARGETS, SOURCE and SOURCES reserved variable names and
    warn if the user tries to set them in a construction environment.

  - Add support for Tar and Zip files.

  - Better documentation of the different ways to export variables to a
    subsidiary SConscript file.  Fix a documentation bug in a tools
    example.

  - Support fetching arbitrary files from the TARGETS or SOURCES lists
    (e.g. ${SOURCES[2]}) when calculating the build signature of a
    command.

  - Don't silently swallow exceptions thrown by Scanners (or other
    exceptions while finding a node's dependent children).

  - Push files to CacheDir() before calling the superclass built()
    method (which may clear the build signature as part of clearing
    cached implicit dependencies, if the file has a source scanner).
    (Bug reported by Jeff Petkau.)

  - Raise an internal error if we attempt to push a file to CacheDir()
    with a build signature of None.

  - Add an explicit Exit() function for terminating early.

  - Change the documentation to correctly describe that the -f option
    doesn't change to the directory in which the specified file lives.
    
  - Support changing directories locally with SConscript directory